<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.baitaplonandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.baitaplonandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.baitaplonandroid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.baitaplonandroid.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.baitaplonandroid.ui.category.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.baitaplonandroid.ui.User.User_Login"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_management"
        android:name="com.example.baitaplonandroid.ui.Admin_Permission.Admin_Home"
        android:label="@string/menu_management"
        tools:layout="@layout/fragment_admin__home" />



    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.baitaplonandroid.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.baitaplonandroid.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />


</navigation>